# alas-core

./: AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: api.md  architecture.md  colaboradores.md  glosario.md  ingestion.md  models.md  roadmap.md
scripts/: convert_insor_dictionary.py
src/alas_core/: __init__.py  cli.py  lexicon.py  pipeline.py
tests/: test_pipeline.py
tests/fixtures/: text_to_gloss.json
